--- a/Registro_Usuarios/usercss.html
+++ b/Registro_Usuarios/usercss.html
@@ -1,56 +1,56 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
+<head>
 
-        <title> Usercss </title>
+    <title> Usercss </title>
 
-        <link rel="stylesheet" href="usercss.css" />
+    <link rel="stylesheet" href="../Registro_Usuarios/css/usercss.css" />
 
-    </head>
+</head>
 
-    <body> 
+<body>
 
-        <div class="ru">
+    <div class="ru">
 
-            <h1> Registro Usuarios </h1>
+        <h1> Registro Usuarios </h1>
 
-        </div>
+    </div>
 
-        <div class="main">
+    <div class="main">
 
-            <form>
+        <form>
 
-                <div id="subtitle">
+            <div id="subtitle">
 
-                    <h2 class="subtitle">Nombre:</h2>
-                    <input class="name" type="text" name="Name" maxlength="25"><br><br>
-                    <label class="labelname">Nombre</label>
-                    <input class="lastname" type="text" name="lastname" maxlength="25">
-                    <label class="labellastname">Apellido</label>                    
-                </div>
+                <h2 class="subtitle">Nombre:</h2>
+                <input class="name" type="text" name="Name" maxlength="25"><br><br>
+                <label class="labelname">Nombre</label>
+                <input class="lastname" type="text" name="lastname" maxlength="25">
+                <label class="labellastname">Apellido</label>
+            </div>
 
-                <h2 class="subtitle">ID User:</h2>
-                <input class="IU" type="number" name="IDUser" min="0" max="99999999999">
+            <h2 class="subtitle">ID User:</h2>
+            <input class="IU" type="number" name="IDUser" min="0" max="99999999999">
 
-                <h2 class="subtitle">Cuenta:</h2>
-                <input class="account" type="text" name="Account" maxlength="20">
-                    
-                <h2 class="subtitle">Contraseña:</h2>
-                <input class="password" type="password" name="Password">
-                
-                <h2 class="subtitle">Direccion:</h2>
-                <input class="direccion" type="text" name="direccion" maxlength="40">
+            <h2 class="subtitle">Cuenta:</h2>
+            <input class="account" type="text" name="Account" maxlength="20">
 
-                <h2 class="subtitle">Email:</h2>
-                <input class="email" type="email" name="email" maxlength="120">
+            <h2 class="subtitle">Contraseña:</h2>
+            <input class="password" type="password" name="Password">
 
-                <h2 class="subtitle">Teléfono:</h2>
-                <input class="number" type="number" name="phone" min="0" max="99999999999999999999"> 
-                <label class="labelnumber">Numero Telefónico</label>
+            <h2 class="subtitle">Direccion:</h2>
+            <input class="direccion" type="text" name="direccion" maxlength="40">
 
-                <h2 class="subtitle"> Pais: </h2>
-                <select class="option" name="pais">
+            <h2 class="subtitle">Email:</h2>
+            <input class="email" type="email" name="email" maxlength="120">
+
+            <h2 class="subtitle">Teléfono:</h2>
+            <input class="number" type="number" name="phone" min="0" max="99999999999999999999">
+            <label class="labelnumber">Numero Telefónico</label>
+
+            <h2 class="subtitle"> Pais: </h2>
+            <select class="option" name="pais">
                     <option disabled="disabled" selected="selected">--Escoge tu país</option>
                     <option value="AF">Afganistán</option>
                     <option value="AL">Albania</option>
@@ -288,12 +288,12 @@
                     <option value="ZW">Zimbabue</option>
                 </select>
 
-                <div id="boton">
+            <div id="boton">
                 <button type="submit">Registrar</button>
-                </div>
-            </form>
-        </div>
+            </div>
+        </form>
+    </div>
 
-    </body>
+</body>
 
 </html>
